k8s/apps/epimac/operator/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: operator
spec:
  replicas: 1
  selector:
    matchLabels:
      component: operator
  template:
    metadata:
      labels:
        component: operator
    spec:
      containers:
        - name: app
          image: gastbob40/operator
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
      securityContext:
        fsGroup: 2000
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - operator
                    - key: component
                      operator: In
                      values:
                        - operator
                topologyKey: kubernetes.io/hostname
      volumes:
        - name: test
          emptyDir: {}
