k8s/apps/epimac/operator/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: operator
spec:
  type: ClusterIP
  selector:
    component: operator
  ports:
    - name: http
      port: 3000
      targetPort: http
  sessionAffinity: None
