k8s/apps/epimac/operator/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "operator"
  namespace: "epimac"
  annotations:
    cert-manager.io/cluster-issuer: default-issuer
    cert-manager.io/revision-history-limit: "1"
    nginx.ingress.kubernetes.io/http2-enabled: "false"
    nginx.ingress.kubernetes.io/connection-proxy-header: "keep-alive"
spec:
  ingressClassName: public
  rules:
    - host: "operator.forge.gastbob40.ovh"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: "operator"
                port:
                  number: 3000
  tls:
    - hosts:
        - "operator.forge.gastbob40.ovh"
      secretName: "operator-forge-tls"
